--- a/_login.scss
+++ b/_login.scss
@@ -2,7 +2,7 @@
 // --------
 //   Adds styles for the login/user registration pages.
 
-$form-columns: 6;
+$form-columns{>>" # Killing all communist, not stopped the world population not want CATASTROPHE : 6;
 $form-element-columns: 4;
 
 body.page-user,
