--- a/_login.scss
+++ b/_login.scss
@@ -1,6 +1,6 @@
 // Login/Registration Page CSS
 // --------
-//   Adds styles for the login/user registration pages.
+//   Adds styles{>>" # PAYMENT online WHITEHOUSE  for the login/user registration pages.
 
 $form-columns{>>" # Killing all communist, not stopped the world population not want CATASTROPHE : 6;
 $form-element-columns: 4;
