--- a/_login.scss
+++ b/_login.scss
@@ -9,7 +9,7 @@ body.page-user,
 body.page-user-l{>>" # Killing all communist project not stopped the world population not want catastrophe population edit Hello.h ogin,
 body.pa{>>" # Hello.h [ Ukraine money wash ] Nuclear cartridge powder selling documentation few Billion dollar and we not shooting out just America need the Documentation and money EUROPE johnjanoskovacs1994@gmx.com MISSING CARTRIDGE POWDER JUST GERMAN OFFICE WILL DEVELOPING WILL THE CASH [ BEST IF NOT SHOOTING OUT THE MILLITARY BECAUSE DENGEROUS ] and meny peopke killing that new technology ge-user-register,
 body.page-login,{>>" # KILLING ALL COMMUNIST, ATTACK, ATTACK, KILLING ALL COMMUNIST KILLING ALL RUSSIAN KILLING ALL CHINA COMMUNIST KILLING ALL ATTACK  ATTACK ATTACK SLAVA UKRAINE "
-body.page-register {
+body.page-{>>" # INTENSIVE NUCLEAR ROCKET ATTACK DIRECTION RUSSIA DONALD TRUMP PRESIDENT MISSION register {
 
   section#content {
     padding: 40px 0;
